--- a/Portfoliosite/past.html
+++ b/Portfoliosite/past.html
@@ -57,136 +57,136 @@
         <h2 class="page-header text-center">Past Artwork</h2>
           <ul id="listcontainer" class="row first">
             <li id="listbox">
-                <img class="thumbnail" width="145px" height="120px" alt="Sleep" src="images/Sleep.jpg">
-                <div class="caption">Sleep<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="145px" height="120px" alt="Sleep- oil on canvas" src="images/Sleep.jpg">
+                <div class="caption">Sleep<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="195px" height="120px" alt="Reading Lessons" src="images/Reading_Lessons.jpg">
-                <div class="caption">Reading Lessons<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="195px" height="120px" alt="Reading Lessons- oil on canvas" src="images/Reading_Lessons.jpg">
+                <div class="caption">Reading Lessons<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="148px" height="120px" alt="Cooking" src="images/Cooking.jpg">
-                 <div class="caption">Cooking<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="148px" height="120px" alt="Cooking- oil on canvas" src="images/Cooking.jpg">
+                 <div class="caption">Cooking<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="79px" height="120px" alt="Ladder" src="images/Ladder.jpg">
-                <div class="caption">Ladder<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="79px" height="120px" alt="Ladder- oil on canvas" src="images/Ladder.jpg">
+                <div class="caption">Ladder<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="152px" height="120px" alt="Last Supper Hero" src="images/Last_Supper_Hero.JPG">
-                <div class="caption">Last Supper Hero<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="152px" height="120px" alt="Last Supper Hero- oil on canvas" src="images/Last_Supper_Hero.JPG">
+                <div class="caption">Last Supper Hero<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="181px" height="120px" alt="Element" src="images/Element.jpg">
-                 <div class="caption">Element<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="181px" height="120px" alt="Element- oil on canvas" src="images/Element.jpg">
+                 <div class="caption">Element<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="99px" height="120px" alt="AOOA" src="images/AOOA.jpg">
-                 <div class="caption">AOOA<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="99px" height="120px" alt="AOOA- oil on canvas" src="images/AOOA.jpg">
+                 <div class="caption">AOOA<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="70px" height="120px" alt="Grecian Urn" src="images/Grecian_Urn.jpg">
-                 <div class="caption">Grecian Urn<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="70px" height="120px" alt="Grecian Urn- oil on canvas" src="images/Grecian_Urn.jpg">
+                 <div class="caption">Grecian Urn<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="83px" height="120px" alt="Peters Doubt" src="images/Peters_Doubt.jpg">
-                 <div class="caption">Peters Doubt<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="83px" height="120px" alt="Peters Doubt- oil on canvas" src="images/Peters_Doubt.jpg">
+                 <div class="caption">Peters Doubt<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="197px" height="120px" alt="Dishes"  src="images/Dishes.jpg">
-                 <div class="caption">Dishes<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="197px" height="120px" alt="Dishes- oil on canvas"  src="images/Dishes.jpg">
+                 <div class="caption">Dishes<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="59px" height="120px" src="images/Blue_Eyes.jpg" alt="Blue Eyes">
-                 <div class="caption">Blue Eyes<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="59px" height="120px" src="images/Blue_Eyes.jpg" alt="Blue Eyes- oil on canvas">
+                 <div class="caption">Blue Eyes<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="105px" height="120px" src="images/Stitches.jpg" alt="Stitches" >
-                 <div class="caption">Stitches<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="105px" height="120px" src="images/Stitches.jpg" alt="Stitches- oil on canvas" >
+                 <div class="caption">Stitches<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="71px" height="120px" src="images/Constellation-1.jpg" alt="Constellation-1" >
-                 <div class="caption">Constellation-1<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="71px" height="120px" src="images/Constellation-1.jpg" alt="Constellation #1- oil on canvas" >
+                 <div class="caption">Constellation #1<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="118px" height="120px" src="images/Constellation-2.jpg" alt="Constellation-2"  alt>
-                 <div class="caption">Constellation-2<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="118px" height="120px" src="images/Constellation-2.jpg" alt="Constellation #2- oil on canvas"  alt>
+                 <div class="caption">Constellation #2<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="88px" height="120px" src="images/Sancho_y_Hina.jpg" alt="Sancho y Hina" >
-                 <div class="caption">Sancho y Hina<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="88px" height="120px" src="images/Sancho_y_Hina.jpg" alt="Sancho y Hina- oil on canvas" >
+                 <div class="caption">Sancho y Hina<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="75px" height="120px" src="images/Mountain_Hare.jpg" alt="Mountain_Hare">
-                 <div class="caption">Mountain_Hare<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="75px" height="120px" src="images/Mountain_Hare.jpg" alt="Mountain Hare- oil on canvas">
+                 <div class="caption">Mountain Hare<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail"  width="95px" height="120px" src="images/Thumb_Wars.jpg" alt="Thumb Wars" >
-                 <div class="caption">Thumb Wars<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail"  width="95px" height="120px" src="images/Thumb_Wars.jpg" alt="Thumb Wars- oil on canvas" >
+                 <div class="caption">Thumb Wars<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="253px" height="120px" src="images/H5N1_Home.jpg" alt="H5N1 Home" >
-                 <div class="caption">H5N1 Home<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="253px" height="120px" src="images/H5N1_Home.jpg" alt="H5N1 Home- oil on found wood" >
+                 <div class="caption">H5N1 Home<p>oil on found wood<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="160px" height="120px" src="images/Weisberg_Landscape.jpg" alt="Weisberg Landscape" >
-                 <div class="caption">Weisberg Landscape<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="160px" height="120px" src="images/Weisberg_Landscape.jpg" alt="Weisberg Landscape- oil on canvas" >
+                 <div class="caption">Weisberg Landscape<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="105px" height="120px" src="images/Prey_for_Better_Whether.jpg" alt="Prey for Better Whether" >
-                 <div class="caption">Prey for Better Whether<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="105px" height="120px" src="images/Prey_for_Better_Whether.jpg" alt="Prey for Better Whether- oil on canvas" >
+                 <div class="caption">Prey for Better Whether<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="151px" height="120px" src="images/Glory.jpg" alt="Glory" >
-                 <div class="caption">Glory<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="151px" height="120px" src="images/Glory.jpg" alt="Glory- oil on canvas" >
+                 <div class="caption">Glory<p>oil and charcoal on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="87px" height="120px" src="images/Still_Life-2.jpg" alt="Still Life-2" >
-                 <div class="caption">Still Life-2<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="87px" height="120px" src="images/Still_Life-2.jpg" alt="Still Life #2- oil on canvas" >
+                 <div class="caption">Still Life #2<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="87px" height="120px" src="images/Still_Life-1.jpg" alt="Still Life-1" >
-                 <div class="caption">Still Life-1<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="87px" height="120px" src="images/Still_Life-1.jpg" alt="Still Life #1- oil on canvas" >
+                 <div class="caption">Still Life #1<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="100px" height="120px" src="images/Self_Portrait_Litho.jpg" alt="Self Portrait Litho" >
-                 <div class="caption">Self Portrait Litho<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="100px" height="120px" src="images/Self_Portrait_Litho.jpg" alt="Self Portrait- lithograph" >
+                 <div class="caption">Self Portrait<p>lithograph<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="97px" height="120px" src="images/Self_Unportrait.jpg" alt="Self Unportrait" >
-                 <div class="caption">Self Unportrait<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="97px" height="120px" src="images/Self_Unportrait.jpg" alt="Self Unportrait- lithograph" >
+                 <div class="caption">Self Unportrait<p>lithograp<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="164px" height="120px" src="images/Childs_Play.jpg" alt="Childs Play" >
-                 <div class="caption">Childs Play<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="164px" height="120px" src="images/Childs_Play.jpg" alt="Childs Play- lithograph" >
+                 <div class="caption">Childs Play<p>lithograp<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="200px" height="120px" src="images/Whos_Guilty.jpg" alt="Whos Guilty" >
-                 <div class="caption">Whos Guilty<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="200px" height="120px" src="images/Whos_Guilty.jpg" alt="Whos Guilty- lithograph" >
+                 <div class="caption">Whos Guilty<p>lithograp<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="90px" height="120px" src="images/Iraqi_Sanctions.jpg" alt="Iraqi Sanctions" >
-                 <div class="caption">Iraqi Sanctions<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="90px" height="120px" src="images/Iraqi_Sanctions.jpg" alt="Iraqi Sanctions- lithograph" >
+                 <div class="caption">Iraqi Sanctions<p>lithograp<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="180px" height="120px" src="images/A_Game_A_Gift.jpg" alt="A Game A Gift" >
-                 <div class="caption">A Game A Gift<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="180px" height="120px" src="images/A_Game_A_Gift.jpg" alt="A Game A Gift- lithograph" >
+                 <div class="caption">A Game A Gift<p>lithograp<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="160px" height="120px" src="images/A_House_But_Not_A_Home.jpg" alt="A House But Not A Home" >
-                 <div class="caption">A House But Not A Home<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="160px" height="120px" src="images/A_House_But_Not_A_Home.jpg" alt="A House But Not A Home- lithograph" >
+                 <div class="caption">A House But Not A Home<p>lithograp<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="138px" height="120px" src="images/Going_Home.jpg" alt="Going Home" >
-                 <div class="caption">Going Home<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="138px" height="120px" src="images/Going_Home.jpg" alt="Going Home- woodcut" >
+                 <div class="caption">Going Home<p>woodcut<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="167px" height="120px" src="images/Untitled.jpg" alt="Untitled" >
-                 <div class="caption">Untitled<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="167px" height="120px" src="images/Untitled.jpg" alt="Untitled- lithograph" >
+                 <div class="caption">Untitled<p>lithograp<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="145px" height="120px" src="images/Manor_Rd_2002.jpg" alt="Manor Rd 2002" >
-                 <div class="caption">Manor Rd 2002<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="145px" height="120px" src="images/Manor_Rd_2002.jpg" alt="Manor Rd 2002- lithograph" >
+                 <div class="caption">Manor Rd 2002<p>lithograp<br>10 x 10 cm</p></div>
             </li>
           </ul>
         <div class="text-center"><a href="past.html">(top)</a></div>
