--- a/Portfoliosite/present.html
+++ b/Portfoliosite/present.html
@@ -57,128 +57,128 @@
         <h2 class="page-header text-center">Current Artwork</h2>
           <ul id="listcontainer" class="row first">
             <li id="listbox">
-                <img class="thumbnail" width="91px" height="120px" alt="Self Portrait with Striped Sweater"  src="images/selfport_striped_shirt.jpg">
-                <div class="caption">Self Portrait with Striped Sweater<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="91px" height="120px" alt="Self Portrait with Striped Sweater- encaustic on paper"  src="images/selfport_striped_shirt.jpg">
+                <div class="caption">Self Portrait with Striped Sweater<p>encaustic on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="75px" height="120px" alt="Self Portrait with Coffee Cup"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
-                <div class="caption">Self Portrait with Coffee Cup<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="75px" height="120px" alt="Self Portrait with Coffee Cup- encaustic on paper"  src="images/Self_Portrait_With_Coffee_Cup.jpg">
+                <div class="caption">Self Portrait with Coffee Cup<p>encaustic on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="71px" height="120px" alt="Self Portrait with Yellow Shirt"  src="images/Self_Portrait_Yellow_Shirt.jpg">
-                 <div class="caption">Self Portrait with Yellow Shirt<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="71px" height="120px" alt="Self Portrait with Yellow Shirt- encaustic on paper"  src="images/Self_Portrait_Yellow_Shirt.jpg">
+                 <div class="caption">Self Portrait with Yellow Shirt<p>encaustic on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="94px" height="120px" alt="Self Portrait with Green Shirt"  src="images/Self_Portrait_Green_Shirt.jpg">
-                <div class="caption">Self Portrait with Green Shirt<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="94px" height="120px" alt="Self Portrait with Green Shirt- encaustic on paper"  src="images/Self_Portrait_Green_Shirt.jpg">
+                <div class="caption">Self Portrait with Green Shirt<p>encaustic on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="160px" height="120px" alt="Encaustic Self Portrait #1"  src="images/encaustic_portrait.jpg">
-                <div class="caption">Encaustic Self Portrait #1<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="160px" height="120px" alt="Encaustic Self Portrait #1- encaustic on wood"  src="images/encaustic_portrait.jpg">
+                <div class="caption">Encaustic Self Portrait #1<p>encaustic on wood<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="157px" height="120px" alt="Line For Icecream"  src="images/Line_For_Icecream.jpg">
-                 <div class="caption">Line For Icecream<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="157px" height="120px" alt="Line For Icecream- encaustic on paper"  src="images/Line_For_Icecream.jpg">
+                 <div class="caption">Line For Icecream<p>encaustic on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="154px" height="120px" alt="Line For Food #1"  src="images/Line_For_Food-1.jpg">
-                 <div class="caption">Line For Food #1<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="154px" height="120px" alt="Line For Food #1- encaustic on paper"  src="images/Line_For_Food-1.jpg">
+                 <div class="caption">Line For Food #1<p>encaustic on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="141px" height="120px" alt="Valentine"  src="images/Valentine.jpg">
-                 <div class="caption">Valentine<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="141px" height="120px" alt="Valentine- watercolor and watercolor pencil on paper"  src="images/Valentine.jpg">
+                 <div class="caption">Valentine<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="96px" height="120px" alt="Hannah Commision 1"  src="images/hannah_commision_1.jpg">
-                 <div class="caption">Hannah Commision 1<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="96px" height="120px" alt="Hannah Commision 1- watercolor and watercolor pencil on paper"  src="images/hannah_commision_1.jpg">
+                 <div class="caption">Hannah Commision 1<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="94px" height="120px" alt="Hannah Commision 2"  src="images/hannah_commision_2.jpg">
-                 <div class="caption">Hannah Commision 2<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="94px" height="120px" alt="Hannah Commision 2- watercolor and watercolor pencil on paper"  src="images/hannah_commision_2.jpg">
+                 <div class="caption">Hannah Commision 2<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="91px" height="120px" alt="Hannah Commision 3"  src="images/hannah_commision_3.jpg">
-                 <div class="caption">Hannah Commision 3<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="91px" height="120px" alt="Hannah Commision 3- watercolor and watercolor pencil on paper"  src="images/hannah_commision_3.jpg">
+                 <div class="caption">Hannah Commision 3<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="116px" height="120px" alt="Octearaffe-inside"  src="images/octearaffe-inside.jpg">
-                <div class="caption">Octearaffe-inside<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="116px" height="120px" alt="Octearaffe-inside- glaze on pottery"  src="images/octearaffe-inside.jpg">
+                <div class="caption">Octearaffe-inside<p>glaze on pottery<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="121px" height="120px" alt="Wolearab-inside"  src="images/Wolearab-inside.jpg">
-                 <div class="caption">Wolearab-inside<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="121px" height="120px" alt="Wolearab-inside- glaze on pottery"  src="images/Wolearab-inside.jpg">
+                 <div class="caption">Wolearab-inside<p>glaze on pottery<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="102px" height="120px" alt="David Folsom-Choctaw Hymns"  src="images/David_Folsom-Choctaw_Hymns.jpg">
-                 <div class="caption">David Folsom-Choctaw Hymns<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="102px" height="120px" alt="David Folsom-Choctaw Hymns- pencil on paper"  src="images/David_Folsom-Choctaw_Hymns.jpg">
+                 <div class="caption">David Folsom-Choctaw Hymns<p>pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="104px" height="120px" alt="Peter Pitchlynn-Choctaw Hymns"  src="images/Peter_Pitchlynn-Choctaw_Hymns.jpg">
-                 <div class="caption">Peter Pitchlynn-Choctaw Hymns<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="104px" height="120px" alt="Peter Pitchlynn-Choctaw Hymns- pencil on paper"  src="images/Peter_Pitchlynn-Choctaw_Hymns.jpg">
+                 <div class="caption">Peter Pitchlynn-Choctaw Hymns<p>pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="104px" height="120px" alt="Cyrus Byington-Choctaw Hymns"  src="images/Cyrus_Byington-Choctaw_Hymns.jpg">
-                 <div class="caption">Cyrus Byington-Choctaw Hymns<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="104px" height="120px" alt="Cyrus Byington-Choctaw Hymns- pencil on paper"  src="images/Cyrus_Byington-Choctaw_Hymns.jpg">
+                 <div class="caption">Cyrus Byington-Choctaw Hymns<p>pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="94px" height="120px" alt="Rev Folsom-Choctaw Hymns"  src="images/Rev_Folsom-Choctaw_Hymns.jpg">
-                 <div class="caption">Rev Folsom-Choctaw Hymns<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="94px" height="120px" alt="Rev Folsom-Choctaw Hymns- pencil on paper"  src="images/Rev_Folsom-Choctaw_Hymns.jpg">
+                 <div class="caption">Rev Folsom-Choctaw Hymns<p>pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="96px" height="120px" alt="Alfred Wright-Choctaw Hymns"  src="images/Al_Wright-Choctaw_Hymns.jpg">
-                <div class="caption">Alfred Wright-Choctaw Hymns<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="96px" height="120px" alt="Alfred Wright-Choctaw Hymns- pencil on paper"  src="images/Al_Wright-Choctaw_Hymns.jpg">
+                <div class="caption">Alfred Wright-Choctaw Hymns<p>pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="91px" height="120px" alt="First Day-Bertram Bobb Documentry"  src="images/First_Day-Bertram_Bobb_Documentry.jpg">
-                 <div class="caption">First Day-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="91px" height="120px" alt="First Day-Bertram Bobb Documentry- watercolor and watercolor pencil on paper"  src="images/First_Day-Bertram_Bobb_Documentry.jpg">
+                 <div class="caption">First Day-Bertram Bobb Documentry<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="165px" height="120px" alt="Kid Fight-Bertram Bobb Documentry"  src="images/Kid_Fight-Bertram_Bobb_Documentry.jpg">
-                 <div class="caption">Kid Fight-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="165px" height="120px" alt="Kid Fight-Bertram Bobb Documentry- watercolor and watercolor pencil on paper"  src="images/Kid_Fight-Bertram_Bobb_Documentry.jpg">
+                 <div class="caption">Kid Fight-Bertram Bobb Documentry<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="165px" height="120px" alt="Enlisting-Bertram Bobb Documentry"  src="images/Enlisting-Bertram_Bobb_Documentry.jpg">
-                <div class="caption">Enlisting-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="165px" height="120px" alt="Enlisting-Bertram Bobb Documentry- watercolor and watercolor pencil on paper"  src="images/Enlisting-Bertram_Bobb_Documentry.jpg">
+                <div class="caption">Enlisting-Bertram Bobb Documentry<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="165px" height="120px" alt="Navy Boxing-Bertram Bobb Documentry"  src="images/Navy_Boxing-Bertram_Bobb_Documentry.jpg">
-                <div class="caption">Navy Boxing-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="165px" height="120px" alt="Navy Boxing-Bertram Bobb Documentry- watercolor and watercolor pencil on paper"  src="images/Navy_Boxing-Bertram_Bobb_Documentry.jpg">
+                <div class="caption">Navy Boxing-Bertram Bobb Documentry<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="87px" height="120px" alt="Golden Glove-Bertram Bobb Documentry"  src="images/Golden_Glove-Bertram_Bobb_Documentry.jpg">
-                <div class="caption">Golden Glove-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="87px" height="120px" alt="Golden Glove-Bertram Bobb Documentry- watercolor and watercolor pencil on paper"  src="images/Golden_Glove-Bertram_Bobb_Documentry.jpg">
+                <div class="caption">Golden Glove-Bertram Bobb Documentry<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="87px" height="120px" alt="Bertram Bobb Meets Mclemore-Bertram Bobb Documentry"  src="images/Bobb_Meets_Mclemore-Bertram_Bobb_Documentry.jpg">
-                 <div class="caption">Bertram Bobb Meets Mclemore-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="87px" height="120px" alt="Bertram Bobb Meets Mclemore-Bertram Bobb Documentry- watercolor and watercolor pencil on paper"  src="images/Bobb_Meets_Mclemore-Bertram_Bobb_Documentry.jpg">
+                 <div class="caption">Bertram Bobb Meets Mclemore-Bertram Bobb Documentry<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="165px" height="120px" alt="Bertram Bobb and McLemore-Bertram Bobb Documentry"  src="images/Bobb_and_McLemore-Bertram_Bobb_Documentry.jpg">
-               <div class="caption">Bertram Bobb and McLemore-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="165px" height="120px" alt="Bertram Bobb and McLemore-Bertram Bobb Documentry- watercolor and watercolor pencil on paper"  src="images/Bobb_and_McLemore-Bertram_Bobb_Documentry.jpg">
+               <div class="caption">Bertram Bobb and McLemore-Bertram Bobb Documentry<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="87px" height="120px" alt="Meeting Politicians-Bertram Bobb Documentry"  src="images/Meeting_Politicians-Bertram_Bobb_Documentry.jpg">
-                <div class="caption">Meeting Politicians-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="87px" height="120px" alt="Meeting Politicians-Bertram Bobb Documentry- watercolor and watercolor pencil on paper"  src="images/Meeting_Politicians-Bertram_Bobb_Documentry.jpg">
+                <div class="caption">Meeting Politicians-Bertram Bobb Documentry<p>wwatercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="170px" height="120px" alt="Bertram Bobb Leading Prayer-Bertram Bobb Documentry"  src="images/Bobb_Leading_Prayer-Bertram_Bobb_Documentry.jpg">
-                <div class="caption">Bertram Bobb Leading Prayer-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="170px" height="120px" alt="Bertram Bobb Leading Prayer-Bertram Bobb Documentry- watercolor and watercolor pencil on paper"  src="images/Bobb_Leading_Prayer-Bertram_Bobb_Documentry.jpg">
+                <div class="caption">Bertram Bobb Leading Prayer-Bertram Bobb Documentry<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="103px" height="120px" alt="Bertram Bobb Portrait-Bertram Bobb Documentry"  src="images/Bobb_Portrait-Bertram_Bobb_Documentry.jpg">
-               <div class="caption">Bertram Bobb Portrait-Bertram Bobb Documentry<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="103px" height="120px" alt="Bertram Bobb Portrait-Bertram Bobb Documentry- watercolor and watercolor pencil on paper"  src="images/Bobb_Portrait-Bertram_Bobb_Documentry.jpg">
+               <div class="caption">Bertram Bobb Portrait-Bertram Bobb Documentry<p>watercolor and watercolor pencil on paper<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="95px" height="120px" alt="Surprise Birthday"  src="images/Surprise_Birthday.jpg">
-                <div class="caption">Surprise Birthday<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="95px" height="120px" alt="Surprise Birthday- oil on canvas"  src="images/Surprise_Birthday.jpg">
+                <div class="caption">Surprise Birthday<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="155px" height="120px" alt="Untitled-Sufi"  src="images/Untitled-Sufi.jpg">
-                <div class="caption">Untitled-Sufi<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="155px" height="120px" alt="Untitled-Sufi- oil on canvas"  src="images/Untitled-Sufi.jpg">
+                <div class="caption">Untitled-Sufi<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
-                <img class="thumbnail" width="121px" height="120px" alt="Darlington Bedroom"  src="images/Darlington_Bedroom.jpg">
-                <div class="caption">Darlington Bedroom<p>medium<br>10 x 10 cm</p></div>
+                <img class="thumbnail" width="121px" height="120px" alt="Darlington Bedroom- oil on canvas"  src="images/Darlington_Bedroom.jpg">
+                <div class="caption">Darlington Bedroom<p>oil on canvas<br>10 x 10 cm</p></div>
             </li>
           </ul>
         <div class="text-center"><a href="present.html">(top)</a></div>
