--- a/Portfoliosite/past.html
+++ b/Portfoliosite/past.html
@@ -154,27 +154,27 @@
             </li>
             <li id="listbox">
                 <img class="thumbnail" width="97px" height="120px" src="images/Self_Unportrait.jpg" alt="Self Unportrait- lithograph" >
-                 <div class="caption">Self Unportrait<p>lithograp<br>10 x 10 cm</p></div>
+                 <div class="caption">Self Unportrait<p>lithograph<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
                 <img class="thumbnail" width="164px" height="120px" src="images/Childs_Play.jpg" alt="Childs Play- lithograph" >
-                 <div class="caption">Childs Play<p>lithograp<br>10 x 10 cm</p></div>
+                 <div class="caption">Childs Play<p>lithograph<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
                 <img class="thumbnail" width="200px" height="120px" src="images/Whos_Guilty.jpg" alt="Whos Guilty- lithograph" >
-                 <div class="caption">Whos Guilty<p>lithograp<br>10 x 10 cm</p></div>
+                 <div class="caption">Whos Guilty<p>lithograph<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
                 <img class="thumbnail" width="90px" height="120px" src="images/Iraqi_Sanctions.jpg" alt="Iraqi Sanctions- lithograph" >
-                 <div class="caption">Iraqi Sanctions<p>lithograp<br>10 x 10 cm</p></div>
+                 <div class="caption">Iraqi Sanctions<p>lithograph<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
                 <img class="thumbnail" width="180px" height="120px" src="images/A_Game_A_Gift.jpg" alt="A Game A Gift- lithograph" >
-                 <div class="caption">A Game A Gift<p>lithograp<br>10 x 10 cm</p></div>
+                 <div class="caption">A Game A Gift<p>lithograph<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
                 <img class="thumbnail" width="160px" height="120px" src="images/A_House_But_Not_A_Home.jpg" alt="A House But Not A Home- lithograph" >
-                 <div class="caption">A House But Not A Home<p>lithograp<br>10 x 10 cm</p></div>
+                 <div class="caption">A House But Not A Home<p>lithograph<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
                 <img class="thumbnail" width="138px" height="120px" src="images/Going_Home.jpg" alt="Going Home- woodcut" >
@@ -182,11 +182,11 @@
             </li>
             <li id="listbox">
                 <img class="thumbnail" width="167px" height="120px" src="images/Untitled.jpg" alt="Untitled- lithograph" >
-                 <div class="caption">Untitled<p>lithograp<br>10 x 10 cm</p></div>
+                 <div class="caption">Untitled<p>lithograph<br>10 x 10 cm</p></div>
             </li>
             <li id="listbox">
                 <img class="thumbnail" width="145px" height="120px" src="images/Manor_Rd_2002.jpg" alt="Manor Rd 2002- lithograph" >
-                 <div class="caption">Manor Rd 2002<p>lithograp<br>10 x 10 cm</p></div>
+                 <div class="caption">Manor Rd 2002<p>lithograph<br>10 x 10 cm</p></div>
             </li>
           </ul>
         <div class="text-center"><a href="past.html">(top)</a></div>
