--- a/kqsite/links.html
+++ b/kqsite/links.html
@@ -28,7 +28,8 @@
             <span class="icon-bar"></span>
           </button>
         </div>
-        
+        <div class="orangecat_head"> <img width="123px" height="59px" alt="Pic description" src="images/kqpic_orangecat_header.jpg">
+        </div>
         <div id="collapsable-nav" class="collapse navbar-collapse">
           <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li id="navHomeButton" class="visible-xs active">
