--- a/kqsite/testimonials.html
+++ b/kqsite/testimonials.html
@@ -13,14 +13,14 @@
     <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html" class="pull-left visible-md visible-lg">
-            <div id="logo-img" img="images/kq-logo_large.jpg" width="150px" height="150px" alt="Logo image"></div>
-          </a>
+          
 
           <div class="navbar-brand">
             <a href="index.html"><h1>Kendal Quinn's Pet Friends</h1></a>
           </div>
-
+          <a href="index.html" class="pull-left visible-md visible-lg">
+            <div id="logo-img" img="images/kq-logo_large.jpg" width="150px" height="150px" alt="Logo image"></div>
+          </a>
           <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -28,7 +28,8 @@
             <span class="icon-bar"></span>
           </button>
         </div>
-        
+        <div class="orangecat_head"> <img width="123px" height="59px" alt="Pic description" src="images/kqpic_orangecat_header.jpg">
+        </div>
         <div id="collapsable-nav" class="collapse navbar-collapse">
           <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li id="navHomeButton" class="visible-xs active">
