--- a/kqsite/about.html
+++ b/kqsite/about.html
@@ -15,8 +15,10 @@
         <div class="navbar-header">
           <a href="index.html"><h1>Kendal Quinn's Pet Friends</h1></a><a href="index.html" class="pull-left visible-md visible-lg">
           </a>
+        </div>
           <div class="navbar-brand">
-          <div id="logo-img" img="images/kq-logo_large.jpg.jpg" width="150px" height="150px" alt="Logo image"></div>
+          <div id="logo-img" img="images/kq-logo_large.jpg.jpg" width="150px" height="150px" alt="Logo image">
+          </div>
           <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
